--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
 /* font */
+
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
 
 .quicksand-font {
@@ -6,113 +7,378 @@
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-  }
+}
 
+/* shared styles */
 
-/* shares styles */
-
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-.display-width, section{
+/* font colors */
+
+.orange {
+    color: orange;
+}
+
+.skyblue {
+    color: skyblue;
+}
+
+.turquoise {
+    color: #05D4DF;
+}
+
+.periwinkle-blue {
+    color: #5D58EF;
+}
+
+/* display flex */
+
+.display-flex {
+    display: flex;
+}
+
+/* max-width */
+
+header,
+.banner,
+.curriculum {
     max-width: 1160px;
     margin: 0 auto;
 }
 
-.display-flex{
-    display: flex;
+.bg-color {
+    background-color: rgb(247, 247, 247);
 }
 
-/* font colors */
-
-.black{
-    color: black;
-}
-.orange{
-    color: orange;
-}
-.skyblue{
-    color: skyblue;
-}
-.turquoise-blue{
-    color: #05D4DF;
-}
-.blue-violet{
-    color: #5D58EF;
-}
-
-/* button styles */
-.primary-btn{
-    background-color: black;
+.primary-btn {
+    background-color: orange;
     color: white;
-    padding: 13px 47px;
+    padding: 10px 47px;
     font-size: 1.25rem;
     font-weight: 700;
     border: none;
     border-radius: 12px;
 }
 
-/* navbar styles */
+.primary-btn:hover {
+    background: none;
+    border: 2px solid orange;
+    border-radius: 12px;
+    color: orange;
+    font-size: 1.25rem;
+    font-weight: 700;
+    padding: 10px 47px;
+}
 
-.navbar{
-    justify-content: space-evenly;
+#card-1 {
+    background: linear-gradient(rgba(222, 245, 255, 1), white, white, white);
+}
+
+#card-2 {
+    background: linear-gradient(rgba(255, 244, 220, 1), white, white, white);
+}
+
+#card-3 {
+    background: linear-gradient(rgb(238, 225, 255), white, white, white);
+}
+
+.stories-btn-date {
+    background-color: #95B226;
+    color: white;
+    border: none;
+    border-radius: 48px;
+    font-size: 1rem;
+    font-weight: 500;
+    text-align: center;
+    padding: 10px 19px;
+    transform: translateX(38.35px) translateY(-60%);
+}
+
+#date-btn-light-turquoise {
+    background-color: #3CD8E8;
+    padding: 15px 19px;
+}
+
+#date-btn-periwinkle-blue {
+    background-color: #5D58F0;
+}
+
+/* navbar related styles */
+
+.navbar {
+    justify-content: space-between;
+    align-items: center;
     margin: 20px auto;
 }
 
-.website-name{
+.website {
     justify-content: center;
     align-items: center;
     gap: 11px;
 }
-.web-name{
+
+.web-name {
     font-size: 2rem;
     font-weight: 700;
-    color: black;
 }
 
-.nam-menu{
+.nav-menu {
     justify-content: center;
     align-items: center;
     gap: 32px;
 }
 
-.nav-text{
-    text-decoration: none;
-    font-size: 1.25rem;
-    font-weight: 700;
-}
-
-.nav-list{
+.nav-list {
     list-style: none;
 }
 
-.contact-btn{
-    background-color: orange;
-    color: white;
-    padding: 10px 60.5px;
+.nav-link {
     font-size: 1.25rem;
-    font-weight: 600;
-    border: none;
-    border-radius: 12px;
+    font-weight: 500;
+    text-decoration: none;
 }
 
-/* banner styles */
-.banner{
+.contact-btn {
+    background-color: orange;
+    color: white;
+    border: none;
+    border-radius: 12px;
+    padding: 15px 60px;
+    font-size: 1.25rem;
+    font-weight: 500;
+}
+
+/* Banner related styles */
+
+.banner {
     justify-content: center;
     align-items: center;
     gap: 50px;
 }
 
-.banner-title{
+.banner-title {
     font-size: 3.5rem;
     font-weight: 700;
-    line-height: 61px;
     margin-bottom: 24px;
 }
 
-.banner-description{
+.banner-description {
     font-size: 1.25rem;
     margin-bottom: 24px;
+}
+
+/* curriculum related styles */
+
+.curriculum {
+    background-image: url(../assets/bg.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+.curriculum-title {
+    font-size: 2.9rem;
+    font-weight: 700;
+    text-align: center;
+    padding-top: 60px;
+}
+
+.curriculum-card-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    gap: 28px;
+    margin: 80px 0;
+}
+
+.curriculum-card {
+    text-align: center;
+    border: none;
+    border-radius: 19px;
+    padding: 50px 40px;
+    box-shadow: 0 0 28.3px rgba(0, 0, 0, 0.05);
+}
+
+.curriculum-card-title {
+    font-size: 1.6rem;
+    font-weight: 700;
+    margin-top: 32px;
+    margin-bottom: 33px;
+}
+
+.curriculum-card-description {
+    font-size: 1rem;
+    line-height: 28px;
+    margin-bottom: 33px;
+}
+
+.read-more {
+    font-size: 1rem;
+    font-weight: 700;
+    text-decoration: none;
+}
+
+
+/* our stories related styles */
+
+.our-stories {
+    background: url(../assets/bg.png), linear-gradient(rgb(250, 250, 250), rgba(254, 163, 1, 0.3));
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+}
+
+
+.stories-title {
+    font-size: 3.6rem;
+    font-weight: 700;
+    text-align: center;
+    padding-top: 60px;
+}
+
+.stories-container {
+    justify-content: center;
+    align-items: center;
+    gap: 19px;
+    margin: 80px 0;
+}
+
+.stories-big-card {
+    background-color: white;
+    border: none;
+    border-radius: 16px;
+    width: 540px;
+    height: 630px;
+}
+
+.stories-big-img {
+    width: 100%;
+    border: none;
+    border-radius: 16px 16px 0 0;
+}
+
+.stories-big-title {
+    font-size: 1.5rem;
+    font-weight: 700;
+    line-height: 38px;
+    margin-bottom: 48px;
+    padding: 0 38px;
+
+}
+
+.stories-big-description {
+    font-size: 1rem;
+    line-height: 29px;
+    margin-bottom: 35px;
+    padding: 0 38px;
+}
+
+.story-sidebar {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 19px;
+}
+
+.small-story-card {
+    background-color: white;
+    border: none;
+    border-radius: 16px;
+    width: 290px;
+    height: 301px;
+}
+
+.small-story-caption {
+    font-size: 1rem;
+    font-weight: 700;
+    line-height: 29px;
+    padding: 0 33px;
+}
+
+.small-story-img {
+    width: 100%;
+    border: none;
+    border-radius: 16px 16px 0 0;
+}
+
+.view-all-btn {
+    text-align: center;
+    padding-bottom: 60px;
+}
+
+/* footer related styles */
+
+footer {
+    background-color: rgba(1, 172, 253, 1);
+}
+
+.footer-section {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 150px;
+    justify-items: center;
+    width: 1160px;
+    margin: 0 auto;
+    padding: 120px 0 150px 0;
+}
+
+.footer-web-info-container {
+    justify-content: center;
+    align-items: center;
+    gap: 11px;
+    height: 82px;
+    margin-bottom: 35px;
+}
+
+.footer-web-name {
+    font-size: 2.6rem;
+    color: white;
+}
+
+.footer-web-info-container>img {
+    height: 100%;
+}
+
+.footer-web-description {
+    font-size: 1.25rem;
+    color: white;
+}
+
+/* footer menu styles */
+
+.footer-menu-title {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: white;
+    margin-bottom: 32px;
+}
+
+.footer-menu-list {
+    list-style: none;
+    margin-bottom: 20px;
+}
+
+.footer-menu-link {
+    text-decoration: none;
+    font-size: 1.25rem;
+    font-weight: 500;
+    color: white;
+}
+
+/* social media styles */
+
+.social-media-title {
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: white;
+    margin-bottom: 32px;
+}
+
+.social-media-container {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+    justify-items: center;
 }
